objects/LocationAreaDocument__c.object
<CustomObject>
    <fields>
        <fullName>LocationAreaDocumentEID__c</fullName>
        <description>The Enterprise ID fort this Location Area Document record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID fort this Location Area Document record.</inlineHelpText>
        <label>Location Area Document EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LocationArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location area described by the document</description>
        <inlineHelpText>The location area described by the document</inlineHelpText>
        <label>Location Area</label>
        <referenceTo>LocationArea__c</referenceTo>
        <relationshipLabel>Location Area Documents</relationshipLabel>
        <relationshipName>LocationAreaDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RepositoryDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The document that defines the location area</description>
        <inlineHelpText>The document that defines the location area</inlineHelpText>
        <label>Document</label>
        <referenceTo>RepositoryDocument__c</referenceTo>
        <relationshipLabel>Location Area Documents</relationshipLabel>
        <relationshipName>LocationAreaDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Location Area Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Location Area Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Area Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>